# anthropic-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
anthropic/: CHANGELOG.md  Cargo.toml  README.md
anthropic/src/: client.rs  lib.rs
anthropic/src/api/: message.rs
anthropic/src/models/: model.rs
examples/basic-message/: Cargo.toml
examples/basic-message/src/: main.rs
examples/stream/: Cargo.toml
examples/stream/src/: main.rs
src/: client.rs  error.rs
src/api/: message.rs  stream.rs
